hphp/hack/test/typecheck/dynamic_class_bad.php.exp
File "dynamic_class_bad.php", line 9, characters 3-11:
Don't use dynamic classes (Typing[4125])
